--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,8 +6,8 @@
 * {
 
     font-family: 'Comic Neue', cursive;
-font-family: 'Major Mono Display', monospace;
-font-family: 'Open Sans', sans-serif;
+    font-family: 'Major Mono Display', monospace;
+    font-family: 'Open Sans', sans-serif;
 
 
     /* font-family: 'MonteCarlo', cursive; */
@@ -39,18 +39,23 @@ font-family: 'Open Sans', sans-serif;
     --topGradient: #97fcff;
     --mainGradient: #2c0072;
 
-    --gradient: linear-gradient(
-        var(--topGradient),
-        var(--mainGradient),
-        var(--mainGradient),
-        var(--mainGradient),
-        var(--mainGradient)
-            );
+    --gradient: linear-gradient(var(--topGradient),
+            var(--mainGradient),
+            var(--mainGradient),
+            var(--mainGradient),
+            var(--mainGradient));
 
-    --text__invert: rgb(255, 255, 255);
+    --primary: #8880ff66;
+    --secondary: #97fcffd7;
+    --invert: #8880ff;
+    --glass__thin: #aca7f62c;
+    --glass__thick: #aca7f669;
+
+    --circle: #ffffff1a;
     --text__main: #2e2e2e;
     --text__title: #2e2e2e;
     --text__section-title: #ffffff;
+    --text__invert: rgb(255, 255, 255);
     /* --text__section-title: rgb(255, 0, 85); */
     --text-light: white;
     --text-dark: #570057;
@@ -59,9 +64,9 @@ font-family: 'Open Sans', sans-serif;
     --shadow: #ffffff2d;
     --shadow1: rgba(0, 0, 0, 0.1);
     --shadow2: rgba(0, 0, 0, 0.2);
-    --shadow3:rgba(0, 0, 0, 0.3);
+    --shadow3: rgba(0, 0, 0, 0.3);
     --shadow4: rgba(0, 0, 0, 0.4);
-    --shadow45:rgba(0, 0, 0, 0.45);
+    --shadow45: rgba(0, 0, 0, 0.45);
 
     --primary: #8880ff66;
     /* --primary: #8880ff66; CURRENT */
@@ -71,15 +76,15 @@ font-family: 'Open Sans', sans-serif;
     /* --secondary: #94ffe8bf; CURRENT */
     /* --accent: rgb(0, 187, 56);
     --accentO: #ff9d00; */
-    
-  
+
+
 
 
     --base: white;
     /* --invert: #aca7f6; */
     /* --text-dark: black; */
 
-        /* MAIN GRADIENT */
+    /* MAIN GRADIENT */
     /* saved orange: #ffa33a,
     --gradient: linear-gradient(#ffa33a,
             #b600b6,
@@ -88,45 +93,48 @@ font-family: 'Open Sans', sans-serif;
     /* MAIN GRADIENT */
 
 
-    --add-color: #00fb3f;
+    --add-color: #00e639;
     --add-gradient: linear-gradient(45deg,
-    #00fb3f,
-    #00fb3f,
-    #5aff83,
-    #92ffad,
-    #53ff7e,
-    #00fb3f,
-    #00fb3f);
+            #00cc33,
+            #00cc33,
+            #00cc33,
+            /* #5aff83, */
+            /* #92ffad, */
+            #ffffff,
+            #00cc33,
+            #00cc33,
+            #00cc33);
 
     --delete-color: #ff3a3a;
     --delete-gradient: linear-gradient(45deg,
-    #ff3a3a,
-    #ff3a3a,
-    #ff6f6f,
-    #ffb9b9,
-    #ff6f6f,
-    #ff3a3a,
-    #ff3a3a);
+            #ff3a3a,
+            #ff3a3a,
+            #ff6f6f,
+            #ffb9b9,
+            #ff6f6f,
+            #ff3a3a,
+            #ff3a3a);
 
     --edit-color: #ffa33a;
     --edit-gradient: linear-gradient(45deg,
-    #ffa33a,
-    #ffa33a,
-    #ffbe73,
-    #ffdeb8,
-    #ffbe73,
-    #ffa33a,
-    #ffa33a);
+            #ffa33a,
+            #ffa33a,
+            #ffbe73,
+            #ffdeb8,
+            #ffbe73,
+            #ffa33a,
+            #ffa33a);
 
+    --submit-color: #3235e6;
     --submit-color: #3a75ff;
     --submit-gradient: linear-gradient(45deg,
-    #0004ff,
-    #0004ff,
-    #3a3dff,
-    #9798ff,
-    #3a3dff,
-    #0004ff,
-    #0004ff);
+            #0004ff,
+            #0004ff,
+            #3a3dff,
+            #9798ff,
+            #3a3dff,
+            #0004ff,
+            #0004ff);
 
     --glass__thin: #aca7f62c;
     --glass__thick: #aca7f669;
@@ -147,16 +155,6 @@ body {
     background-image: var(--gradient);
     background-repeat: no-repeat;
     background-color: var(--mainGradient);
-}
-
-@keyframes bga {
-    0% {
-        background-position: left;
-    }
-
-    100% {
-        background-position: right;
-    }
 }
 
 main {
@@ -186,14 +184,13 @@ main {
 
 .nav__title {
     float: left;
-    color: var(--text__logo);
-    transition: .4s ease-out;
-    border-radius: 15px;
     padding: 5px 10px;
+    font-size: 40px;
     letter-spacing: 2px;
     font-family: feastOfFlesh;
+    color: var(--text__logo);
     -webkit-text-stroke: 1px #000000;
-    font-size: 40px;
+    transition: .4s ease-out;
 }
 
 .nav__title:hover {
@@ -251,7 +248,7 @@ main {
 
     border-radius: 15px;
     background-color: var(--glass__thick);
-    /* color: var(--text__main); */
+
     font-size: larger;
     backdrop-filter: blur(5px);
     z-index: 5;
@@ -318,8 +315,8 @@ main {
     padding: 40px;
     justify-content: end;
     justify-items: center;
-   
-    
+
+
 }
 
 
@@ -328,7 +325,7 @@ main {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    
+
 }
 
 /* -------- HOMEPAGE CONTAINER -------- */
@@ -346,7 +343,6 @@ main {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    /* justify-items: center; */
     width: 70vw;
 }
 
@@ -367,8 +363,8 @@ main {
 }
 
 .sc__search {
-    display:flex;
-    flex-direction:row;
+    display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center
 }
@@ -387,11 +383,13 @@ main {
     display: grid;
     grid-template-columns: 1.5fr 1.5fr;
     justify-content: center;
-    padding:  0 50px 50px 50px;
-    
+    padding: 0 50px 50px 50px;
+
 }
 
-.top { grid-column: span 2}
+.top {
+    grid-column: span 2
+}
 
 .sc__event {
     background-color: var(--secondary);
@@ -431,10 +429,6 @@ main {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    /* grid-auto-rows: minmax(1fr 2fr);
-    justify-items: stretch;
-    grid-gap: 1em; */
-    /* grid-auto-columns: auto; */
     margin: 0 40px;
 }
 
@@ -451,9 +445,8 @@ main {
     margin: 0 1rem 1rem 1rem;
     padding: 20px;
     max-width: 7rem;
-    /* box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.2),
-        0 0 10px 10px rgba(0, 0, 0, 0.1); */
-        box-shadow: 0 0 5px 5px var(--shadow2),
+
+    box-shadow: 0 0 5px 5px var(--shadow2),
         0 0 10px 10px var(--shadow1);
     transition: .25s ease-in-out;
 }
@@ -463,8 +456,7 @@ main {
     box-shadow: 0 0 10px 10px var(--shadow1),
         0px 10px 30px var(--shadow45);
     background-color: #77faff;
-    /* box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1),
-        0px 10px 30px rgba(0, 0, 0, 0.45); */
+
 }
 
 /* ---------------- CONTENT ---------------- */
@@ -514,14 +506,6 @@ main {
 .event {
     color: var(--text__main);
     letter-spacing: 2px;
-
-    /* border-radius: 15px; */
-    transition: .3s ease-in-out;
-}
-
-.event:hover,
-.event:focus {
-    color: var(--text__invert);
 }
 
 /* -------- DASHBOARD CONTENT ------- */
@@ -558,32 +542,30 @@ main {
     border-radius: 15px;
     font-weight: bold;
     letter-spacing: 2px;
+
+    background-size: 400%;
+    background-position: left;
     transition: background-position .5s ease-in-out .1s,
         box-shadow .3s ease-in-out;
 }
 
-.add-btn{
+.add-btn {
     background-image: var(--add-gradient);
-    background-size: 400%;
-    background-position: left;
     box-shadow: inset 0 0 15px 10px var(--add-color);
 }
-.delete-btn{
+
+.delete-btn {
     background-image: var(--delete-gradient);
-    background-size: 400%;
-    background-position: left;
     box-shadow: inset 0 0 15px 10px var(--delete-color);
 }
-.edit-btn{
+
+.edit-btn {
     background-image: var(--edit-gradient);
-    background-size: 400%;
-    background-position: left;
     box-shadow: inset 0 0 15px 10px var(--edit-color);
 }
+
 .submit-btn {
     background-image: var(--submit-gradient);
-    background-size: 400%;
-    background-position: left;
     box-shadow: inset 0 0 15px 10px var(--submit-color);
 }
 
@@ -666,11 +648,6 @@ main {
 
 }
 
-/* .membername {
-    list-style: none;
-    text-decoration: none;
-    color: white;
-} */
 /* -------- MODAL -------- */
 
 /* the modal (background) */
@@ -753,20 +730,23 @@ main {
     background-color: var(--circle);
 }
 
-/* CURRENT HOVER */
-/* box-shadow: 0px 0px 5px 5px var(--accentO);
-    background-color: var(--accentO);
-    border-radius: 15px;
-
-/* IDEA FOR HOVER EFFECT */
-/* .event:hover {
-    box-shadow: 0px 0px 5px 5px var(--secondary);
-    background-color: var(--secondary);
-
-} */
-
 @media screen and (max-width: 1025px) {
-    .mc__dashboard {flex-direction: column;}
+
+    .mc__homepage {
+        padding: 0px
+    }
+
+    .mc__search {
+        padding: 0px;
+    }
+
+    .mc__event {
+        padding: 0px;
+    }
+
+    .mc__dashboard {
+        flex-direction: column;
+    }
 }
 
 @media screen and (max-width: 900px) {
@@ -782,6 +762,7 @@ main {
         justify-items: center;
         align-items: center;
     }
+
     .nav ul {
         display: flex;
         flex-direction: row;
