--- a/views/partials/eventPage_partial.hbs
+++ b/views/partials/eventPage_partial.hbs
@@ -37,9 +37,9 @@
 
                     <li class="list-el format__details-manage">
                         <div>
-                            <span class="content">{{content}}</span>
-                            <span class="detail-id" style="display: none;">{{id}}</span>
-                            <span class="event-id" style="display: none;">{{event_id}}</span>
+                            <span class="event content">{{content}}</span>
+                            <span class="event detail-id" style="display: none;">{{id}}</span>
+                            <span class="event event-id" style="display: none;">{{event_id}}</span>
                         </div>
                         <div>
                             <button class="list-edit-btn" id="{{id}}">Edit</button>
@@ -53,9 +53,9 @@
                 <div id="oneline format__details-join">
                     {{!-- <li class="list-el" id="list-el-{{id}}">{{content}}</li> --}}
                     <li class="list-el">
-                        <span class="content">{{content}}</span>
-                        <span class="detail-id" style="display: none;">{{id}}</span>
-                        <span class="event-id" style="display: none;">{{event_id}}</span>
+                        <span class="event content">{{content}}</span>
+                        <span class="event detail-id" style="display: none;">{{id}}</span>
+                        <span class="event event-id" style="display: none;">{{event_id}}</span>
                     </li>
                 </div>
                 {{/each}}
